[package]
name = "at"
version = "0.1.1"
edition = "2024"
keywords = ["slice", "indexing", "negative-index", "helpers", "utilities"]
repository = "https://github.com/abgros/at"
description = "Helpers for indexing slices."
license = "MIT"

[dependencies]

[features]
unsafe-unchecked = []

[dev-dependencies]
criterion = "*"

[[bench]]
name = "check_regressions"
harness = false