[package]
name = "at"
version = "0.2.0"
edition = "2024"
keywords = ["slice", "indexing", "negative-index", "helpers", "utilities"]
repository = "https://github.com/abgros/at"
description = "Helpers for indexing slices."
license = "MIT"

[dependencies]

[features]
unsafe-unchecked = []

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "check_regressions"
harness = false